SC3.0 weebly spacing issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -764,7 +764,7 @@ body {
 
   .mctLower {
     font-size: 2.4vh;
-    padding-top: 4vh;
+    padding-top: 20px;
   }
 
   .mcSlider {
